--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@reduxjs/toolkit": "^2.3.0",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.46.1",
+    "@typescript-eslint/eslint-plugin": "^8.14.0",
+    "@typescript-eslint/parser": "^8.14.0",
     "alias": "^0.0.5",
     "axios": "^1.7.7",
     "next": "15.0.0",
@@ -41,6 +43,6 @@
     "eslint": "^8",
     "eslint-config-next": "15.0.0",
     "sass-loader": "^13.3.3",
-    "typescript": "^5"
+    "typescript": "^5.6.3"
   }
 }
