--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -14,7 +15,7 @@
     "@mui/icons-material": "^6.1.6",
     "@mui/material": "^6.1.6",
     "@mui/styled-engine-sc": "^6.1.6",
-    "@prisma/client": "^5.21.1",
+    "@prisma/client": "^5.22.0",
     "@reduxjs/toolkit": "^2.3.0",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.46.1",
@@ -24,7 +25,7 @@
     "axios": "^1.7.7",
     "next": "15.0.0",
     "next-auth": "^4.24.10",
-    "prisma": "^5.21.1",
+    "prisma": "^5.22.0",
     "react": "^18",
     "react-debounce-input": "^3.3.0",
     "react-dom": "^18",
